minor fix: edit font, z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Limelight&family=Notable&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tajawal:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Limelight&family=Notable&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tajawal:wght@200;300;400&display=swap');
 @import "tailwindcss";
 
 @theme {
   --color-cod-gray: #131313;
   --nav-bg: #13131326;
-  --font-logo: "Oswald", sans-serif;
-  --font-poppins: "Poppins", sans-serif;
   --font-lime: "Limelight", sans-serif;
   --font-notable: "Notable", sans-serif;
+  --font-logo: "Oswald", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
 }
 
 
